--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
   <!-- Title of Website -->
   <title>Challenge yourself with Bike Computer for iOS and Android</title>
-
+  <meta HTTP-EQUIV='Content-Security-Policy' CONTENT="default-src 'self' ; script-src 'self' 'unsafe-inline' *.disqus.com a.disquscdn.com requirejs.org www.google-analytics.com; style-src 'self'
+   'unsafe-inline' a.disquscdn.com; img-src 'self' *; media-src 'self' ; frame-src disqus.com;">`
   <meta name="description" content="The only Bike Computer you need is your phone, equiped with Keep Me Safe feature,
         	Strava integration, real-time navigation and more to come.
         ">
