--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <!-- saved from url=(0024)https://bikecomputer.co/ -->
 <html lang="en" class=" supports csstransforms3d"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-
+  <meta http-equiv="Content-Security-Policy" content="default-src *;
+   img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
+   style-src  'self' 'unsafe-inline' *">
 
   <!-- Title of Website -->
   <title>Challenge yourself with Bike Computer for iOS and Android</title>
