--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 <!-- /End Main -->
 
 <!-- Back to Top Button -->
-<a href="https://bikecomputer.co/#page" class="btn-circle btn-circle-lg btn-color btn-top smooth-scroll" style="display: block;">
+<a href="" class="btn-circle btn-circle-lg btn-color btn-top smooth-scroll" style="display: block;">
   <i class="fa fa-angle-up"></i>
 </a>
 <!-- /End Back to Top Button -->    <!-- Scripts -->
