--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	      <div class="container">
 	        <div class="navbar-header">
           <!-- Logo -->
-          <a id="_url3" itemprop="url" href="https://bikecomputer.co/#page" class="navbar-brand logo-color smooth-scroll"><span></span></a>
+          <a id="_url3" itemprop="url" href="" class="navbar-brand logo-color smooth-scroll"><span></span></a>
 
           <ul class="nav navbar-nav navbar-right">
             <li>
@@ -435,9 +435,9 @@
 
         <!-- Buttons -->
         <div class="col-sm-8 col-sm-offset-2 col-xs-12 wrapper-v-lg text-center">
-          <a id="_downloadUrl7" itemprop="downloadUrl" href="https://itunes.apple.com/app/id1153508193" class="btn btn-color smooth-scroll ButtonAppStore download" onclick="ga(&#39;send&#39;, &#39;event&#39;, &#39;ButtonAppStore&#39;, &#39;Click&#39;, &#39;App Store Downloads&#39;);">
+          <a id="_downloadUrl7" itemprop="downloadUrl" href="" class="btn btn-color smooth-scroll ButtonAppStore download" onclick="ga(&#39;send&#39;, &#39;event&#39;, &#39;ButtonAppStore&#39;, &#39;Click&#39;, &#39;App Store Downloads&#39;);">
             <img src="./assets/appstore.png" alt="iPhone Bikecomputer"></a>
-          <a id="_downloadUrl8" itemprop="downloadUrl" href="https://play.google.com/store/apps/details?id=co.bikecomputer" class="btn btn-color smooth-scroll ButtonPlayStore download" onclick="ga(&#39;send&#39;, &#39;event&#39;, &#39;ButtonPlayStore&#39;, &#39;Click&#39;, &#39;Play Store Downloads&#39;);">
+          <a id="_downloadUrl8" itemprop="downloadUrl" href="" class="btn btn-color smooth-scroll ButtonPlayStore download" onclick="ga(&#39;send&#39;, &#39;event&#39;, &#39;ButtonPlayStore&#39;, &#39;Click&#39;, &#39;Play Store Downloads&#39;);">
             <img src="./assets/googleplay.png" alt="Android Bikecomputer"></a>
         </div>
         <!-- /End Buttons -->
@@ -463,8 +463,8 @@
 
         <div class="col-md-6 col-xs-5 wrapper-v-sm text-left">
 	        <ul class="terms">
-		    	<li><a href="https://bikecomputer.co/privacy-policy" class="privacy-policy">Politicas de privacidad</a></li>
-				<li><a href="https://bikecomputer.co/terms-and-conditions" class="privacy-policy">Terminos y condiciones</a></li>
+		    	<li><a href="" class="privacy-policy">Politicas de privacidad</a></li>
+				<li><a href="" class="privacy-policy">Terminos y condiciones</a></li>
 		    </ul>
         </div>
 
